--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
-<body>
-
-<h1>PedjaOljaca GitHUb Repository</h1>
-<p><b>Hello World!</b></p>
-
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Main</title>
+    </head>
+    <body>
+        <h1>PedjaOljaca GitHUb Repository</h1>
+        <p><b>Hello World!</b></p>
+    </body>
 </html>
+
