--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Main</title>
     </head>
     <body>
-        <h1>PedjaOljaca GitHUb Repository</h1>
+        <h1>GitHUb Repository</h1>
         <p><b>Hello World!</b></p>
     </body>
 </html>
